Fix spacing quote section

--- a/style.css
+++ b/style.css
@@ -129,16 +129,15 @@ a,
 /** Quote section **/
 .quote-section {
 /**
-    
-    
     flex: 1;
     width: 100hv;
 **/
-    background-color: grey;
+    background-color: rgb(197, 197, 197);
     width: 100%;
     align-self: center;
     justify-content: center;
     display: flex;
+    padding: 48px;
 }
 .quote {
     display: flex;
@@ -154,11 +153,15 @@ a,
 .quote p{
     font-size: 24px;
     align-self: flex-start;
+    padding-bottom: 16px;
+    color:rgb(53, 53, 53);
+    font-style: italic;
 
 }
 .quote h3 {
     margin: 0;
     align-self: flex-end;
+    color:rgb(32, 30, 49)
 }
 
 /** CTA section **/
@@ -206,6 +209,7 @@ a,
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blanchedalmond;
-    padding: 16px;
+    background-color: rgb(50, 52, 61);
+    padding: 16px 0;
+    margin: 0;
 }
